# quantec-python

./: .env.test  .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini
quantec/easydata/: __init__.py  cache.py  client.py  validators.py
tests/: conftest.py  test_get_data.py  test_get_grid_data.py  test_get_recipes.py  test_get_selections.py
